added image credits

--- a/slides.html
+++ b/slides.html
@@ -500,14 +500,24 @@
 <h2>Mental Model 1: Navigating a directory tree</h2>
 <div class="fragment">
 <p>On our computer, the <strong>directory tree</strong> organizes files and directories in an (upside down) tree-like structure. In each folder, there is a parental directory, and there can be files and directories within it.</p>
+<div class="quarto-figure quarto-figure-center">
+<figure>
 <p><img data-src="https://andysbrainbook.readthedocs.io/en/latest/_images/UnixTree1.png" width="600"></p>
+<figcaption>Source: https://andysbrainbook.readthedocs.io/en/latest/_images/UnixTree1.png</figcaption>
+</figure>
+</div>
 <p>Example “home” <strong>directory path</strong>: <code>/Users/andrew/</code></p>
 </div>
 </section>
 <section id="basic-directory-tree-navigation" class="slide level2">
 <h2>Basic directory tree navigation</h2>
 <div class="fragment">
+<div class="quarto-figure quarto-figure-center">
+<figure>
 <p><img data-src="https://andysbrainbook.readthedocs.io/en/latest/_images/UnixTree1.png" width="400"></p>
+<figcaption>Source: https://andysbrainbook.readthedocs.io/en/latest/_images/UnixTree1.png</figcaption>
+</figure>
+</div>
 </div>
 <div class="fragment">
 <ul>
@@ -557,7 +567,7 @@ Pod J</code></pre>
 <div class="quarto-figure quarto-figure-center">
 <figure>
 <p><img data-src="https://cs.wellesley.edu/~cs110/lectures/L16/images/function.png"></p>
-<figcaption>Function machine from algebra class.</figcaption>
+<figcaption>Source: Wellesley CS 110: https://cs.wellesley.edu/~cs110/lectures/L16/images/function.png</figcaption>
 </figure>
 </div>
 </div>
@@ -565,7 +575,12 @@ Pod J</code></pre>
 <section id="ls-example" class="slide level2">
 <h2><code>ls</code> example</h2>
 <div class="fragment">
+<div class="quarto-figure quarto-figure-center">
+<figure>
 <p><img data-src="https://swcarpentry.github.io/shell-novice/fig/shell_command_syntax.svg"></p>
+<figcaption>Source: Software Carpentry: https://swcarpentry.github.io/shell-novice/fig/shell_command_syntax.svg</figcaption>
+</figure>
+</div>
 </div>
 <div class="fragment">
 <pre><code>andrew@MGQQR2YQRT9 ~ % ls /Users
