--- a/intro_to_command_line_slides.html
+++ b/intro_to_command_line_slides.html
@@ -353,7 +353,7 @@
 <ul>
 <li><p>Name, pronouns, group you work in</p></li>
 <li><p>What you want to get out of the workshop</p></li>
-<li><p>Favorite winter activity?</p></li>
+<li><p>Favorite spring activity?</p></li>
 </ul></li>
 </ul>
 </div>
